# ChangeLog for dev-perl/Path-Class
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Path-Class/ChangeLog,v 1.16 2009/09/07 08:36:16 tove Exp $

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -Path-Class-0.16.ebuild:
  Cleanup

  26 Aug 2009; Raúl Porcel <armin76@gentoo.org> Path-Class-0.17.ebuild:
  sparc/x86 stable wrt #280439

  09 Aug 2009; nixnut <nixnut@gentoo.org> Path-Class-0.17.ebuild:
  ppc stable #280439

  05 Aug 2009; <chainsaw@gentoo.org> Path-Class-0.17.ebuild:
  Marked stable on AMD64 as requested by Michele Beltrame in bug #280439.
  Files=3, Tests=166, 0 wallclock secs ( 0.04 usr 0.01 sys + 0.14 cusr 0.04
  csys = 0.23 CPU), result: PASS.

*Path-Class-0.17 (16 Jun 2009)

  16 Jun 2009; Torsten Veller <tove@gentoo.org> +Path-Class-0.17.ebuild:
  Version bump

  22 Nov 2008; Torsten Veller <tove@gentoo.org> Path-Class-0.16.ebuild:
  Remove Module-Build from RDEPEND. Fix LICENSE.

  18 Nov 2008; Torsten Veller <tove@gentoo.org> Path-Class-0.16.ebuild:
  New virtuals: module-build

  16 Aug 2008; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove kang from metadata.xml (#51508)

  19 Apr 2008; Robin H. Johnson <robbat2@gentoo.org> Path-Class-0.16.ebuild:
  Add ~ppc64.

  21 Nov 2007; nixnut <nixnut@gentoo.org> Path-Class-0.16.ebuild:
  Stable on ppc wrt bug 199029

  19 Nov 2007; Samuli Suominen <drac@gentoo.org> Path-Class-0.16.ebuild:
  amd64 stable wrt #199029

  19 Nov 2007; Dawid Węgliński <cla@gentoo.org> Path-Class-0.16.ebuild:
  Stable on x86 (bug #199029)

  19 Nov 2007; Ferris McCormick <fmccor@gentoo.org> Path-Class-0.16.ebuild:
  Sparc stable --- Bug #199029 --- "All tests successful, 2 subtests skipped."

  19 Aug 2007; Christian Hartmann <ian@gentoo.org> metadata.xml,
  Path-Class-0.16.ebuild:
  Fixed bug #183110

*Path-Class-0.16 (21 Jun 2007)

  21 Jun 2007; Guillaume Destuynder <kang@gentoo.org> +metadata.xml,
  +Path-Class-0.16.ebuild: