@@ -1,4 +1,6 @@
 DIST Path-Class-0.17.tar.gz 18744 RMD160 3d4d09426d103840bd4e3d6ee44e906e7b92bf76 SHA1 e1a8b7df1da11357ab3d335e7a40eaf444bcfde6 SHA256 b53dac9d8d51edcca1b8bc6a052fd4412ef363a647bda78a64305c339fb5b0d1
+DIST Path-Class-0.18.tar.gz 22463 RMD160 764be8a3b400bb19f71a431d1bfa34159b169194 SHA1 a6ca799e2e804c20fbf2cc487beb8a9a41b3474b SHA256 3b616005e7991d579dc0767345a544523954104d41936ef485910b01bb23db0a
 EBUILD Path-Class-0.17.ebuild 586 RMD160 24cda6f2b9e1ee0344caf8bc450322c513b26a6c SHA1 9c8b0d5717fc74249414d1cb46f4751a2f053c3e SHA256 83319caef72a997bba44103d51c458c5de7f27e1525d512060d8347c15e6b2ff
-MISC ChangeLog 2080 RMD160 6d7a8c22d9728c53575f37b9562be93ea116807c SHA1 e89bcfd1813b597d9a89e924ceb14a0328b069b0 SHA256 99264b83a7bfa8aec9e2433d511f56705c660293d945e0e344d38e93cd57f0b7
+EBUILD Path-Class-0.18.ebuild 568 RMD160 463cd8329bf93c4597b84d68650484f36484aa22 SHA1 bb3114ce58999050ef16015aed041cb13e0997b0 SHA256 17d34b7c75c0ba45902fea549ac82af267c40e0cddca494762e5cd2738d3301b
+MISC ChangeLog 2201 RMD160 1adc8961bb771a6e346aea3f98f2e43e63dff94c SHA1 47a6ff92784ab451ff40d5fc5440f1ec4f70affd SHA256 8166fc9318e36eb0b0bcf83898b7073ed1ded8d392e79aaa10774d09bb93f02d
 MISC metadata.xml 159 RMD160 312f9ce05a5e6d5b2ae2dd53bf0371d80bb33a7f SHA1 ed741bf99f00660c2cfca56bcd1241336ad47fd7 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd
