@@ -1,0 +1,21 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Path-Class/Path-Class-0.18.ebuild,v 1.1 2009/12/21 18:52:55 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=KWILLIAMS
+inherit perl-module
+
+DESCRIPTION="Cross-platform path specification manipulation"
+
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
+IUSE="test"
+
+RDEPEND=">=virtual/perl-File-Spec-0.87"
+DEPEND="${RDEPEND}
+	virtual/perl-Module-Build
+	test? ( virtual/perl-Test-Simple )"
+
+SRC_TEST="do"
