@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Path-Class
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Path-Class/ChangeLog,v 1.16 2009/09/07 08:36:16 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Path-Class/ChangeLog,v 1.17 2009/12/21 18:52:55 tove Exp $
+
+*Path-Class-0.18 (21 Dec 2009)
+
+  21 Dec 2009; Torsten Veller <tove@gentoo.org> +Path-Class-0.18.ebuild:
+  Version bump
 
   07 Sep 2009; Torsten Veller <tove@gentoo.org> -Path-Class-0.16.ebuild:
   Cleanup
